--- a/src/KeePassWin/Resources/en/Resources.resw
+++ b/src/KeePassWin/Resources/en/Resources.resw
@@ -120,7 +120,13 @@
   <data name="MainPageMenuItemDisplayName" xml:space="preserve">
     <value>Main page</value>
   </data>
-  <data name="SecondPageMenuItemDisplayName" xml:space="preserve">
-    <value>Second page</value>
+  <data name="MenuItemOpenCommandTitle" xml:space="preserve">
+    <value>Open</value>
+  </data>
+  <data name="MenuItemOpenSameFileContent" xml:space="preserve">
+    <value>The database you selected is already available.</value>
+  </data>
+  <data name="MenuItemOpenSameFileTitle" xml:space="preserve">
+    <value>Database already open!</value>
   </data>
 </root>
