--- a/src/KeePassWin/Resources/en/LocalizedStrings.resw
+++ b/src/KeePassWin/Resources/en/LocalizedStrings.resw
@@ -129,11 +129,17 @@
   <data name="EmailMessageToName" xml:space="preserve">
     <value>KeePassWin</value>
   </data>
+  <data name="InvalidCredentials" xml:space="preserve">
+    <value>Invalid credentials</value>
+  </data>
   <data name="MainPageMenuItemDisplayName" xml:space="preserve">
     <value>Main page</value>
   </data>
   <data name="MenuItemOpenCommandTitle" xml:space="preserve">
     <value>Open</value>
+  </data>
+  <data name="MenuItemOpenError" xml:space="preserve">
+    <value>Could not open file</value>
   </data>
   <data name="MenuItemOpenSameFileContent" xml:space="preserve">
     <value>The database you selected is already available.</value>
