--- a/src/KeePassWin/Resources/en/Resources.resw
+++ b/src/KeePassWin/Resources/en/Resources.resw
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AppMenuOpen.Text" xml:space="preserve">
+    <value>Open</value>
+  </data>
+  <data name="AppMenuRemove.Text" xml:space="preserve">
+    <value>Remove</value>
+  </data>
   <data name="CommandNewEntry.Label" xml:space="preserve">
     <value>Create entry</value>
   </data>
